Update the 1.1.5 branch to provide a native target and dependency.
This is necessary for cross-compilation builds, where we want to link a test program on the build machine only. Without a separate dependency and library that specifies `native: true`, there's no way to use this library with `native: true` targets.

To accomplish this without duplication, we use two dictionaries with a set of machine and compiler info, with one loop handling the build machine and another the host machine.

I also set build_by_default to false for both library targets, because it was causing a cross-compilation build failure in my setup even though I'm not referencing libcmocka, only libcmocka_native.

--- a/src/meson.build
+++ b/src/meson.build
@@ -28,4 +28,19 @@ libcmocka = library(
   version : lib_version,
   install : get_option('buildtype') != 'static',
   override_options : _overrides,
+  build_by_default: false,
+)
+
+libcmocka_native = library(
+  'cmocka_native',
+  ['cmocka.c'],
+  c_args : '-DHAVE_CONFIG_H=1',
+  include_directories : [inc_include, inc_private_native],
+  vs_module_defs : 'cmocka.def',
+  soversion : build_machine.system() != 'windows' ? lib_version.split('.')[0] : '',
+  version : lib_version,
+  install : false, # Cannot install native targets in cross builds
+  override_options : _overrides,
+  native: true,
+  build_by_default: false,
 )
