Refactor configuration data update
- Rename header variable in dictionary for clearer purpose
- Eliminate unnecessary conf and conf_native variables by moving configuration_data() into the loop
- Add clarifying comments to subdir calls

--- a/meson.build
+++ b/meson.build
@@ -32,22 +32,17 @@ inc_include = include_directories('include')
 # Config Generation #
 #####################
 
-conf = configuration_data()
-conf_native = configuration_data()
-
 cc_dict = {
     'compiler': meson.get_compiler('c'),
     'machine': host_machine,
-    'config': conf,
-    'header-subdir': 'private',
+    'config_h_subdir': 'private',
     'native': false
 }
 
 cc_native_dict = {
     'compiler': meson.get_compiler('c', native: true),
     'machine': build_machine,
-    'config': conf_native,
-    'header-subdir': 'private_native',
+    'config_h_subdir': 'private_native',
     'native': true
 }
 
@@ -55,9 +50,10 @@ configurations = [cc_dict, cc_native_dict]
 
 foreach entry : configurations
   compiler = entry.get('compiler')
-  config = entry.get('config')
   is_native = entry.get('native')
   machine = entry.get('machine')
+
+  config = configuration_data()
 
   if ['gcc', 'clang'].contains(compiler.get_id())
     add_project_arguments(
@@ -184,7 +180,9 @@ endif
   endif
 
   # Execute subdir to create config.h for this pass
-  subdir(entry.get('header-subdir'))
+  # This requires the use of the variable named "config" for configuration_data(),
+  # as this variable is used in each configuration header subdirectory.
+  subdir(entry.get('config_h_subdir'))
 
 endforeach
 
